# diffusors

./: .dockerignore  .gitignore  Dockerfile  README.md  cdiff.py  datamodule.py  diffusors_colab.ipynb  environment.yml  model.py  pyproject.toml  run.sh  scheduler.py  segmentation.py  segmentation_chest.py  segmentation_chest_old.py  segmentation_diffuser_one.py  segmentation_diffuser_two.py
loss_function/: dice_loss.py
model/: medical_segformer.py
